# anomalyx

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: mutants.toml
.claude/: settings.json
.claude/agents/: detector-author.md  format-parser.md  mutation-hardener.md
.claude/workflows/: add-format.js  gate.js
.github/workflows/: ci.yml  pages.yml
crates/anomalyx/: Cargo.toml
crates/anomalyx/src/: describe.rs  main.rs  schema.rs
crates/anomalyx/tests/: golden.rs
crates/anomalyx/tests/golden/: describe.json  scan_basic.json  schema.json
crates/ax-cli/: Cargo.toml
crates/ax-cli/src/: describe.rs  main.rs  schema.rs
crates/ax-cli/tests/: cli.rs
crates/ax-core/: Cargo.toml
crates/ax-core/src/: det.rs  dict.rs  envelope.rs  error.rs  finding.rs  lib.rs  record.rs  roles.rs  value.rs
crates/ax-detect/: Cargo.toml
crates/ax-detect/src/: cadence.rs  calibrate.rs  coll.rs  config.rs  ctx.rs  dist.rs  fdr.rs  lib.rs  linalg.rs  mv.rs  point.rs  robustz.rs  structural.rs
crates/ax-normalize/: Cargo.toml
crates/ax-normalize/src/: binary.rs  format.rs  infer.rs  lib.rs  parser.rs  table.rs
crates/ax-normalize/src/parsers/: accesslog.rs  auditd.rs  avro.rs  cef.rs  cloudtrail.rs  columnar.rs  delimited.rs  dns.rs  eve.rs  evtx.rs  journal.rs  json.rs  logfmt.rs  mod.rs  ndjson.rs  netflow.rs  osquery.rs  otlp.rs  pcap.rs  prometheus.rs  sqlite.rs  syslog.rs  toml.rs  vpcflow.rs  xlsx.rs  xml.rs  yaml.rs  zeek.rs
crates/ax-normalize/tests/: robustness.rs
crates/ax-validate/: Cargo.toml
crates/ax-validate/src/: lib.rs
crates/ax-validate/tests/: nist_strd.rs  stress.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  contract.md  determinism.md  envelope.md  examples.md  formats.md  gates.md  install.md  introduction.md  modes.md  taxonomy.md  validation.md
examples/: README.md  journal_anomalies.py  polymarket_anomalies.py  stock_anomalies.py  synergy_market.py
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: crates__ax-cli__src__describe.rs_line_14_col_5_001.diff  crates__ax-cli__src__main.rs_line_100_col_13.diff  crates__ax-cli__src__main.rs_line_109_col_13.diff  crates__ax-cli__src__main.rs_line_123_col_5.diff  crates__ax-cli__src__main.rs_line_124_col_5.diff  crates__ax-cli__src__main.rs_line_124_col_9.diff  crates__ax-cli__src__main.rs_line_125_col_9.diff  crates__ax-cli__src__main.rs_line_132_col_5.diff  crates__ax-cli__src__main.rs_line_132_col_5_001.diff  crates__ax-cli__src__main.rs_line_132_col_5_002.diff  crates__ax-cli__src__main.rs_line_132_col_5_003.diff  crates__ax-cli__src__main.rs_line_132_col_5_004.diff  crates__ax-cli__src__main.rs_line_132_col_5_005.diff  crates__ax-cli__src__main.rs_line_133_col_20.diff  crates__ax-cli__src__main.rs_line_133_col_20_001.diff  crates__ax-cli__src__main.rs_line_133_col_22.diff  crates__ax-cli__src__main.rs_line_148_col_5.diff  crates__ax-cli__src__main.rs_line_149_col_5.diff  crates__ax-cli__src__main.rs_line_149_col_5_001.diff  crates__ax-cli__src__main.rs_line_159_col_5.diff  crates__ax-cli__src__main.rs_line_173_col_39.diff  crates__ax-cli__src__main.rs_line_173_col_39_001.diff  crates__ax-cli__src__main.rs_line_173_col_39_002.diff  crates__ax-cli__src__main.rs_line_185_col_20.diff  crates__ax-cli__src__main.rs_line_193_col_5.diff  crates__ax-cli__src__main.rs_line_216_col_30.diff  crates__ax-cli__src__main.rs_line_224_col_23.diff  crates__ax-cli__src__main.rs_line_224_col_31.diff  crates__ax-cli__src__main.rs_line_224_col_39_001.diff  crates__ax-cli__src__main.rs_line_224_col_39_002.diff  crates__ax-cli__src__main.rs_line_235_col_5.diff  crates__ax-cli__src__main.rs_line_236_col_21.diff  crates__ax-cli__src__main.rs_line_260_col_23.diff  crates__ax-cli__src__main.rs_line_260_col_31.diff  crates__ax-cli__src__main.rs_line_260_col_39.diff  crates__ax-cli__src__main.rs_line_260_col_39_001.diff  crates__ax-cli__src__main.rs_line_260_col_39_002.diff  crates__ax-cli__src__main.rs_line_26_col_5.diff  crates__ax-cli__src__main.rs_line_272_col_21.diff  crates__ax-cli__src__main.rs_line_37_col_5.diff  (+245 more)
mutants.out/diff/: crates__ax-cli__src__describe.rs_line_14_col_5.diff  crates__ax-cli__src__describe.rs_line_14_col_5_001.diff  crates__ax-cli__src__main.rs_line_107_col_20.diff  crates__ax-cli__src__main.rs_line_114_col_5.diff  crates__ax-cli__src__main.rs_line_114_col_5_001.diff  crates__ax-cli__src__main.rs_line_115_col_5.diff  crates__ax-cli__src__main.rs_line_132_col_30.diff  crates__ax-cli__src__main.rs_line_150_col_20.diff  crates__ax-cli__src__main.rs_line_158_col_5.diff  crates__ax-cli__src__main.rs_line_173_col_23.diff  crates__ax-cli__src__main.rs_line_173_col_31.diff  crates__ax-cli__src__main.rs_line_180_col_30.diff  crates__ax-cli__src__main.rs_line_199_col_5.diff  crates__ax-cli__src__main.rs_line_224_col_39.diff  crates__ax-cli__src__main.rs_line_26_col_5.diff  crates__ax-cli__src__main.rs_line_37_col_5.diff  crates__ax-cli__src__main.rs_line_64_col_5.diff  crates__ax-cli__src__main.rs_line_64_col_5_001.diff  crates__ax-cli__src__main.rs_line_77_col_5_001.diff  crates__ax-cli__src__main.rs_line_77_col_5_003.diff  crates__ax-cli__src__main.rs_line_77_col_5_004.diff  crates__ax-cli__src__main.rs_line_79_col_5_001.diff  crates__ax-cli__src__main.rs_line_79_col_5_002.diff  crates__ax-cli__src__main.rs_line_79_col_5_003.diff  crates__ax-cli__src__main.rs_line_79_col_5_007.diff  crates__ax-cli__src__main.rs_line_79_col_5_008.diff  crates__ax-cli__src__main.rs_line_97_col_5_002.diff  crates__ax-cli__src__main.rs_line_97_col_5_003.diff  crates__ax-cli__src__main.rs_line_97_col_5_004.diff  crates__ax-cli__src__main.rs_line_97_col_5_005.diff  crates__ax-cli__src__main.rs_line_98_col_20.diff  crates__ax-cli__src__main.rs_line_98_col_20_001.diff  crates__ax-cli__src__main.rs_line_98_col_22.diff  crates__ax-cli__src__schema.rs_line_10_col_5.diff  (+438 more)
scripts/: gates.sh  publish.sh
