[workspace]
resolver = "2"
members = [
    "crates/ax-core",
    "crates/ax-normalize",
    "crates/ax-detect",
    "crates/anomalyx",
    "crates/ax-validate",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/copyleftdev/anomalyx"
authors = ["copyleftdev"]

[workspace.dependencies]
# `version` alongside `path` is required to publish to crates.io. The crates.io
# package names are namespaced under the brand (`anomalyx-*`, since the short
# `ax-*` names were taken), but the import/extern name stays `ax_core` etc. via
# the dependency key + `package` rename — so no source code changes are needed.
# Keep versions in sync with workspace.package.version above.
ax-core = { path = "crates/ax-core", version = "0.7.0", package = "anomalyx-core" }
ax-normalize = { path = "crates/ax-normalize", version = "0.7.0", package = "anomalyx-normalize" }
ax-detect = { path = "crates/ax-detect", version = "0.7.0", package = "anomalyx-detect" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# detection math (assembled, not reinvented)
statrs = "0.18"

# property-based testing gate
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
