[package]
name = "ax-detect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "anomalyx detector registry: point, distributional, structural, multivariate and cadence families"
keywords = ["anomaly-detection", "outlier", "drift", "mahalanobis", "statistics"]
categories = ["science", "mathematics"]

[dependencies]
ax-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
statrs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
