[package]
name = "anomalyx-normalize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "anomalyx normalization: any input format -> the ax-core RecordSet"
keywords = ["csv", "parquet", "arrow", "normalization", "dataframe"]
categories = ["parsing", "encoding"]

[dependencies]
ax-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
csv = "1"
# YAML manifests (Kubernetes / CI) are deserialized into a serde_json::Value and
# lowered through the same record path as JSON. Lightweight, pure-Rust, and
# deterministic (sorted keys), so it stays on in the text-only build too.
serde_yaml = "0.9"
# TOML configs. Parsed to a toml::Value, converted to a serde_json::Value, then
# lowered like JSON/YAML. INI is hand-rolled (no extra dep). Both feed the
# config-drift use case via struct.schema.
toml = "0.8"
# Syslog (RFC 3164 / 5424) wire messages. The dual-RFC field parsing (BSD vs ISO
# timestamps, structured data) is delegated to this permissive parser; we derive
# the numeric facility/severity ourselves from the <PRI> header. We pin a fixed
# year + UTC (chrono::Utc) when parsing so a year-less RFC 3164 timestamp stays
# deterministic — syslog_loose's default path reads the wall clock / local zone.
syslog_loose = "0.23"
chrono = "0.4"
# Polars/Arrow backbone for binary columnar formats (Parquet, Arrow IPC), behind
# the RecordSet boundary and the default-on `polars` feature. Text formats never
# touch it; `--no-default-features` yields a lean text-only normalizer.
polars = { version = "0.53", default-features = false, features = [
    "parquet",
    "ipc",
], optional = true }

[features]
default = ["polars"]
polars = ["dep:polars"]

[dev-dependencies]
proptest = { workspace = true }
